--- a/style.css
+++ b/style.css
@@ -71,3 +71,22 @@ footer {
     text-align: center;
     padding: 20px;
 }
+
+/* CUADROS */
+cuadro {
+    width: 45%;              /* ocupa la mitad de la pantalla */
+    background-color: #002b5c; /* color de fondo */
+    padding: 20px;           /* espacio interno */
+    border-radius: 10px;     /* bordes redondeados */
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2); /* sombra */
+    text-align: center;
+}
+
+/* CONTENEDOR DE CUADROS*/
+contenedor {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+}
