--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ footer {
 /* CUADROS */
 .cuadro {
     flex: 1;                 /* permite que se ajusten automáticamente */
-    width: 35%;          /* evita que ocupen toda la fila */
+    width: 300px;          /* evita que ocupen toda la fila */
     background-color: white;
     color: black;
     padding: 20px;
