--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* RESET BÁSICO */
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     background-color: #f4f6f9;
 }
 
@@ -91,6 +91,8 @@ footer {
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 /* CONTENEDOR DE CUADROS*/
@@ -151,9 +153,40 @@ footer {
     padding: 20px;
 }
 .hero-texto h2 {
-    font-size: clamp(6rem, 10vw, 8rem);
+    font-size: clamp(3rem, 5vw, 4rem);
 }
 
 .hero-texto p {
-    font-size: clamp(3rem, 5vw, 4rem);
+    font-size: clamp(1.5rem, 2.5vw, 2rem);
+}
+
+/* LAYOUT DE VALORES */
+.layout {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+    padding: 20px;
+}
+
+/* cuadro grande izquierda */
+.titulo {
+    background: white;
+    color: black;
+    padding: 30px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+/* columna derecha */
+.lista {
+    display: grid;
+    gap: 15px;
+}
+
+/* cuadros pequeños */
+.box {
+    text-align: center;
+    font-weight: bold;
 }
