--- a/style.css
+++ b/style.css
@@ -82,7 +82,16 @@ footer {
 }
 
 /* CUADROS */
-.cuadro {
+.cuadro-titulo {
+    flex: 1;                 /* permite que se ajusten automáticamente */
+    max-width: 35%;          /* evita que ocupen toda la fila */
+    background-color: white;
+    color: black;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+.cuadro-texto {
     flex: 1;                 /* permite que se ajusten automáticamente */
     max-width: 35%;          /* evita que ocupen toda la fila */
     background-color: white;
