--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ footer {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    text-align: center;
 }
 .cuadro-texto {
     flex: 1;                 /* permite que se ajusten automáticamente */
