--- a/style.css
+++ b/style.css
@@ -207,3 +207,40 @@ footer {
     font-size: 1.2rem;
     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
 }
+
+/* Estilo de contacto*/
+.contacto-seccion {
+    background: #f5f5f5;
+    padding: 40px 20px;
+    text-align: center;
+}
+
+.contacto-seccion h2 {
+    font-size: 2rem;
+    margin-bottom: 25px;
+}
+
+.contacto-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.contacto-item {
+    background: white;
+    padding: 15px 20px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: black;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    min-width: 250px;
+    max-width: 320px;
+    text-align: left;
+    transition: 0.3s;
+}
+
+.contacto-item:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+}
