--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ header {
     background-color: #002b5c;
     color: white;
     padding: 15px 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: fixed;   /* lo fija en la pantalla */
+    top: 0;            /* pegado arriba */
+    left: 0;
+    width: 100%;       /* ocupa todo el ancho */
+    z-index: 1000;     /* se mantiene por encima del contenido */
 }
 
 /* LOGO Y TITULO */
@@ -62,7 +64,7 @@ nav a:hover {
 
 /* CONTENIDO */
 main {
-    padding: 40px;
+     padding-top: 90px; 
 }
 
 section {
