--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ header {
     left: 0;
     width: 100%;       /* ocupa todo el ancho */
     z-index: 1000;     /* se mantiene por encima del contenido */
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 }
 
 /* LOGO Y TITULO */
