--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
 nav a {
     color: white;
     text-decoration: none;
-    margin-left: 50px;
+    margin-right: 20px;
     font-weight: bold;
     transition: 0.3s;
 }
