--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ header {
 nav a {
     color: white;
     text-decoration: none;
+    padding-right: 10px;
     margin-right: 20px;
     font-weight: bold;
     transition: 0.3s;
@@ -68,7 +69,7 @@ nav a:hover {
 
 /* CONTENIDO */
 main {
-     padding-top: 90px; 
+     padding-top: 100px; 
 }
 
 section {
