--- a/style.css
+++ b/style.css
@@ -9,16 +9,17 @@ body {
 header {
     background-color: #002b5c;
     color: white;
-    padding: 15px 60px;
+    padding: 15px 40px;
     position: fixed;   /* lo fija en la pantalla */
     top: 0;            /* pegado arriba */
     left: 0;
     width: 100%;       /* ocupa todo el ancho */
     z-index: 1000;     /* se mantiene por encima del contenido */
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     flex-wrap: nowrap;
+    gap: 500px;
 }
 
 /* LOGO Y TITULO */
@@ -68,7 +69,7 @@ nav a:hover {
 
 /* CONTENIDO */
 main {
-     padding-top: 110px; 
+     padding-top: 120px; 
 }
 
 section {
