--- a/style.css
+++ b/style.css
@@ -9,17 +9,16 @@ body {
 header {
     background-color: #002b5c;
     color: white;
-    padding: 15px 40px;
+    padding: 15px 20px;
     position: fixed;   /* lo fija en la pantalla */
     top: 0;            /* pegado arriba */
     left: 0;
     width: 100%;       /* ocupa todo el ancho */
     z-index: 1000;     /* se mantiene por encima del contenido */
     display: flex;
-    justify-content: flex-start;
+    justify-content:space-between;
     align-items: center;
     flex-wrap: nowrap;
-    gap: 500px;
 }
 
 /* LOGO Y TITULO */
