--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
     justify-content:center;
     align-items: center;
     flex-wrap: nowrap;
-    margin-left: 20%;
+    gap: 20%;
 }
 
 /* LOGO Y TITULO */
